showed ChatGPT API call. now working on langchain tutorial

--- a/backend/app/ai/langchain-starter/LLM-starter.ipynb
+++ b/backend/app/ai/langchain-starter/LLM-starter.ipynb
@@ -2,19 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "import os\n",
+    "import openai\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv()) # read the local .env file\n",
+    "openai.api_key = os.environ['OPENAI_API_KEY'] # this is now the API key to use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World!\n"
+      "hello there!\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello World!\")"
+    "testEnvString = os.environ['TEST_ENV'] # test to see if .env is working\n",
+    "print(testEnvString)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# complete direct API call to OpenAI\n",
+    "\n",
+    "# current model (using GPT 4o)\n",
+    "\n",
+    "llm_model = 'gpt-4o'\n",
+    "\n",
+    "# define function to get completion\n",
+    "def getCompletion(prompt, model=llm_model):\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.chat.completions.create(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "        temperature=0\n",
+    "    )\n",
+    "\n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1+1 equals 2.'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this is how we would normally call something\n",
+    "getCompletion(\"What is 1+1?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" However, what if we want to keep on CHAINING these responses on top of each other?\n",
+    "If we have several options here, there will be a whole SEQUENCE OF PROMPTS for this.\n",
+    "\n",
+    "Let's try LangChain\n",
+    "\"\"\""
    ]
   }
  ],
