--- a/backend/app/ai/langchain-starter/LLM-starter.ipynb
+++ b/backend/app/ai/langchain-starter/LLM-starter.ipynb
@@ -87,9 +87,16 @@
     "\"\"\" However, what if we want to keep on CHAINING these responses on top of each other?\n",
     "If we have several options here, there will be a whole SEQUENCE OF PROMPTS for this.\n",
     "\n",
-    "Let's try LangChain\n",
+    "Let's try LangChain out now\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
