--- a/backend/app/ai/langchain-starter/LLM-starter.ipynb
+++ b/backend/app/ai/langchain-starter/LLM-starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,17 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello there!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "testEnvString = os.environ['TEST_ENV'] # test to see if .env is working\n",
     "print(testEnvString)"
@@ -35,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1+1 equals 2.'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this is how we would normally call something\n",
     "getCompletion(\"What is 1+1?\")"
@@ -96,7 +77,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "\n",
+    "chat = ChatOpenAI(temperature=0.0, model=llm_model)\n",
+    "\n",
+    "# this creates an object here\n",
+    "# when building applications, set temperature 0.0 (0.7 is default)\n",
+    "chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a prompt here, with a prompt template\n",
+    "template_string = template_string = \"\"\"Translate the text \\\n",
+    "that is delimited by triple backticks \\\n",
+    "into a style that is {style}. \\\n",
+    "text: ```{text}```\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "\n",
+    "prompt_template = ChatPromptTemplate.from_template(template_string)\n",
+    "\n",
+    "# this prompt_template, based on the one from above, detects the two input_variables style and text.\n",
+    "prompt_template\n",
+    "\n",
+    "# the input variables are all here\n",
+    "prompt_template.messages[0].prompt.input_variables"
+   ]
   }
  ],
  "metadata": {
