--- a/backend/app/ai/langchain-starter/LLM-starter.ipynb
+++ b/backend/app/ai/langchain-starter/LLM-starter.ipynb
@@ -117,6 +117,51 @@
     "# the input variables are all here\n",
     "prompt_template.messages[0].prompt.input_variables"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "style=\"\"\"In a very professional, succinct, and business-forward manner. Should commnunicate information clearly\n",
+    "\"\"\"\n",
+    "\n",
+    "text = \"\"\"Walkin' with my back to the sun, keep my head to the sky \\\n",
+    "Me against the world, it's me, myself and I, like De La \\\n",
+    "Got in touch with my soul \\\n",
+    "Tradin' softly on a path down the rockiest road \\\n",
+    "Life isn't ice cream without Monopoly dough \\\n",
+    "The property grows in value, and rightfully so, I gotta have it\n",
+    "\"\"\"\n",
+    "\n",
+    "# this will generate a prompt\n",
+    "messages = prompt_template.format_messages(style=style,\n",
+    "                                           text=text)\n",
+    "# this will generate a prompt\n",
+    "print(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chat!\n",
+    "response = chat(messages)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Above is an application for LangChain. How to create strong and flexible prompts to feed into the LLM + model\n",
+    "# Prompt templates are useful for sophisticated applications. Good to re-use prompts that are good"
+   ]
   }
  ],
  "metadata": {
