WIP: langchain learning

--- a/backend/app/ai/langchain-starter/LLM-starter.ipynb
+++ b/backend/app/ai/langchain-starter/LLM-starter.ipynb
@@ -160,7 +160,10 @@
    "outputs": [],
    "source": [
     "# Above is an application for LangChain. How to create strong and flexible prompts to feed into the LLM + model\n",
-    "# Prompt templates are useful for sophisticated applications. Good to re-use prompts that are good"
+    "# Prompt templates are useful for sophisticated applications. Good to re-use prompts that are good\n",
+    "\n",
+    "# langchain prompt library also utilizes output prompting. however, you can help LLM to return a specific output\n",
+    "# (e.g. chain-of-thought reasoning)"
    ]
   }
  ],
