--- a/backend/app/ai/langchain-starter/LLM-starter.ipynb
+++ b/backend/app/ai/langchain-starter/LLM-starter.ipynb
@@ -163,7 +163,161 @@
     "# Prompt templates are useful for sophisticated applications. Good to re-use prompts that are good\n",
     "\n",
     "# langchain prompt library also utilizes output prompting. however, you can help LLM to return a specific output\n",
-    "# (e.g. chain-of-thought reasoning)"
+    "# (e.g. chain-of-thought reasoning)\n",
+    "\n",
+    "# this might be USEFUL TO FORMAT THE QUESTIONS LATER! :)\n",
+    "\n",
+    "# the template can be asked to EXTRACT in a certain way\n",
+    "customer_review = \"\"\"\\\n",
+    "This leaf blower is pretty amazing.  It has four settings:\\\n",
+    "candle blower, gentle breeze, windy city, and tornado. \\\n",
+    "It arrived in two days, just in time for my wife's \\\n",
+    "anniversary present. \\\n",
+    "I think my wife liked it so much she was speechless. \\\n",
+    "So far I've been the only one using it, and I've been \\\n",
+    "using it every other morning to clear the leaves on our lawn. \\\n",
+    "It's slightly more expensive than the other leaf blowers \\\n",
+    "out there, but I think it's worth it for the extra features.\n",
+    "\"\"\"\n",
+    "\n",
+    "review_template = \"\"\"\\\n",
+    "For the following text, extract the following information:\n",
+    "\n",
+    "gift: Was the item purchased as a gift for someone else? \\\n",
+    "Answer True if yes, False if not or unknown.\n",
+    "\n",
+    "delivery_days: How many days did it take for the product \\\n",
+    "to arrive? If this information is not found, output -1.\n",
+    "\n",
+    "price_value: Extract any sentences about the value or price,\\\n",
+    "and output them as a comma separated Python list.\n",
+    "\n",
+    "Format the output as JSON with the following keys:\n",
+    "gift\n",
+    "delivery_days\n",
+    "price_value\n",
+    "\n",
+    "text: {text}\n",
+    "\"\"\"\n",
+    "outputTemplate = ChatPromptTemplate.from_template(review_template)\n",
+    "newMessages = outputTemplate.format_messages(text=customer_review)\n",
+    "response = chat(newMessages)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PARSERS: You can provide a pre-defined schema to output something with LangChain\n",
+    "# this can help parse the LLM output into a Python dictionary\n",
+    "from langchain.output_parsers import ResponseSchema\n",
+    "from langchain.output_parsers import StructuredOutputParser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can separate out each part of the response here. This allows\n",
+    "gift_schema = ResponseSchema(name=\"gift\",\n",
+    "                             description=\"Was the item purchased\\\n",
+    "                             as a gift for someone else? \\\n",
+    "                             Answer True if yes,\\\n",
+    "                             False if not or unknown.\")\n",
+    "delivery_days_schema = ResponseSchema(name=\"delivery_days\",\n",
+    "                                      description=\"How many days\\\n",
+    "                                      did it take for the product\\\n",
+    "                                      to arrive? If this \\\n",
+    "                                      information is not found,\\\n",
+    "                                      output -1.\")\n",
+    "price_value_schema = ResponseSchema(name=\"price_value\",\n",
+    "                                    description=\"Extract any\\\n",
+    "                                    sentences about the value or \\\n",
+    "                                    price, and output them as a \\\n",
+    "                                    comma separated Python list.\")\n",
+    "\n",
+    "response_schemas = [gift_schema, \n",
+    "                    delivery_days_schema,\n",
+    "                    price_value_schema]\n",
+    "\n",
+    "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)\n",
+    "format_instructions = output_parser.get_format_instructions()\n",
+    "\n",
+    "print(format_instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review_template_2 = \"\"\"\\\n",
+    "For the following text, extract the following information:\n",
+    "\n",
+    "gift: Was the item purchased as a gift for someone else? \\\n",
+    "Answer True if yes, False if not or unknown.\n",
+    "\n",
+    "delivery_days: How many days did it take for the product\\\n",
+    "to arrive? If this information is not found, output -1.\n",
+    "\n",
+    "price_value: Extract any sentences about the value or price,\\\n",
+    "and output them as a comma separated Python list.\n",
+    "\n",
+    "text: {text}\n",
+    "\n",
+    "{format_instructions}\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_template(template=review_template_2)\n",
+    "\n",
+    "messages = prompt.format_messages(text=customer_review, \n",
+    "                                format_instructions=format_instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(messages[0].content)\n",
+    "response = chat(messages)\n",
+    "print(response.content)\n",
+    "output_dict = output_parser.parse(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this should be a JSON!\n",
+    "type(output_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dict.get('delivery_days')"
    ]
   }
  ],
