WIP: finished memory

--- a/backend/app/ai/langchain-starter/LLM-Memory.ipynb
+++ b/backend/app/ai/langchain-starter/LLM-Memory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "\"Hello! I'd be happy to help you generate test problems. What subject or topic are you focusing on? For example, are you looking for math problems, science questions, language exercises, or something else? Let me know so I can tailor the problems to your needs!\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -122,10 +122,10 @@
     {
      "data": {
       "text/plain": [
-       "\"1+1 equals 2. It's one of the most basic arithmetic operations and a fundamental building block in mathematics. If you need more complex problems or problems in a different area, feel free to ask!\""
+       "\"1+1 is 2! That's a classic example of a basic arithmetic problem. If you're looking for more math problems, I can certainly help with that. Would you like problems in addition, subtraction, multiplication, division, or perhaps something more advanced like algebra or geometry? Let me know!\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
       "Human: Hello, can you help me generate test problems?\n",
       "AI: Hello! I'd be happy to help you generate test problems. What subject or topic are you focusing on? For example, are you looking for math problems, science questions, language exercises, or something else? Let me know so I can tailor the problems to your needs!\n",
       "Human: What's 1+1?\n",
-      "AI: 1+1 equals 2. It's one of the most basic arithmetic operations and a fundamental building block in mathematics. If you need more complex problems or problems in a different area, feel free to ask!\n",
+      "AI: 1+1 is 2! That's a classic example of a basic arithmetic problem. If you're looking for more math problems, I can certainly help with that. Would you like problems in addition, subtraction, multiplication, division, or perhaps something more advanced like algebra or geometry? Let me know!\n",
       "Human: What did I ask you to generate earlier?\n",
       "AI:\u001b[0m\n",
       "\n",
@@ -163,16 +163,166 @@
     {
      "data": {
       "text/plain": [
-       "'You asked me to help you generate test problems. If you have a specific subject or topic in mind, please let me know so I can create problems that are tailored to your needs!'"
+       "'You asked me to help you generate test problems. If you have a specific subject or type of problem in mind, please let me know, and I can create some tailored examples for you!'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "conversation.predict(input=\"What did I ask you to generate earlier?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human: Hello, can you help me generate test problems?\n",
+      "AI: Hello! I'd be happy to help you generate test problems. What subject or topic are you focusing on? For example, are you looking for math problems, science questions, language exercises, or something else? Let me know so I can tailor the problems to your needs!\n",
+      "Human: What's 1+1?\n",
+      "AI: 1+1 is 2! That's a classic example of a basic arithmetic problem. If you're looking for more math problems, I can certainly help with that. Would you like problems in addition, subtraction, multiplication, division, or perhaps something more advanced like algebra or geometry? Let me know!\n",
+      "Human: What did I ask you to generate earlier?\n",
+      "AI: You asked me to help you generate test problems. If you have a specific subject or type of problem in mind, please let me know, and I can create some tailored examples for you!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(memory.buffer) # this allows us to store the entire conversation, so far"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': \"Human: Hello, can you help me generate test problems?\\nAI: Hello! I'd be happy to help you generate test problems. What subject or topic are you focusing on? For example, are you looking for math problems, science questions, language exercises, or something else? Let me know so I can tailor the problems to your needs!\\nHuman: What's 1+1?\\nAI: 1+1 is 2! That's a classic example of a basic arithmetic problem. If you're looking for more math problems, I can certainly help with that. Would you like problems in addition, subtraction, multiplication, division, or perhaps something more advanced like algebra or geometry? Let me know!\\nHuman: What did I ask you to generate earlier?\\nAI: You asked me to help you generate test problems. If you have a specific subject or type of problem in mind, please let me know, and I can create some tailored examples for you!\"}"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "memory.load_memory_variables({}) # Returns the actual object to see the entire conversation so far"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'history': 'Human: Hi\\nAI: Wazzzzzapppppp'}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can also set memory\n",
+    "memoryNew = ConversationBufferMemory()\n",
+    "memoryNew.save_context({\"input\": \"Hi\"}, {\"output\": \"Wazzzzzapppppp\"})\n",
+    "\n",
+    "memoryNew.load_memory_variables({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mThe following is a friendly conversation between a human and an AI. The AI is talkative and provides lots of specific details from its context. If the AI does not know the answer to a question, it truthfully says it does not know.\n",
+      "\n",
+      "Current conversation:\n",
+      "System: The human greets the AI and mentions they are just hanging out. The AI responds casually, and the human asks what is on the schedule for today.\n",
+      "AI: There is a meeting at 8am with your product team. You will need your powerpoint presentation prepared. 9am-12pm have time to work on your LangChain project which will go quickly because Langchain is such a powerful tool. At Noon, lunch at the italian resturant with a customer who is driving from over an hour away to meet you to understand the latest in AI. Be sure to bring your laptop to show the latest LLM demo.\n",
+      "Human: What would be a good demo to show?\n",
+      "AI:\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'history': \"System: The human greets the AI and mentions they are just hanging out. The AI responds casually, and the human asks what is on the schedule for today. The AI outlines a busy schedule including a meeting at 8am, time to work on a LangChain project, and a lunch meeting with a customer to discuss the latest in AI. The human asks for a good demo to show, and the AI suggests several ideas including text generation, question answering, summarization, translation, sentiment analysis, code generation, and an interactive chatbot. The AI also advises tailoring the demo to the customer's specific interests and ensuring all necessary preparations are made for a smooth presentation.\"}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To add more memory, you can keep on adding and appending NEW stuff in it with save_context\n",
+    "# For LLM chat conversation, the LLM is stateless and it doesn't remember anything\n",
+    "\n",
+    "# Usually, wrapper code is provided so the memory can provide context to each INDEPENDENT call. this is usually considered a preamble\n",
+    "\n",
+    "# LangChain provides good way to store different kinds of memories\n",
+    "\n",
+    "# BUFFERWINDOW memory: it only remembers the last x conversations (only keeps a window of memories)\n",
+    "\n",
+    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "# ^ with this, you can do this to prevent the memory going way too long\n",
+    "# this bufferwindow memory can help save TOKENS (save money!)\n",
+    "\n",
+    "from langchain.memory import ConversationTokenBufferMemory # we can also use this one, to include a max token limit to save on cost and keep cost consistent\n",
+    "\n",
+    "# we can also have memory to SUMMARIZE the current memory conversation for us!\n",
+    "from langchain.memory import ConversationSummaryBufferMemory\n",
+    "\n",
+    "# create a long string\n",
+    "schedule = \"There is a meeting at 8am with your product team. \\\n",
+    "You will need your powerpoint presentation prepared. \\\n",
+    "9am-12pm have time to work on your LangChain \\\n",
+    "project which will go quickly because Langchain is such a powerful tool. \\\n",
+    "At Noon, lunch at the italian resturant with a customer who is driving \\\n",
+    "from over an hour away to meet you to understand the latest in AI. \\\n",
+    "Be sure to bring your laptop to show the latest LLM demo.\"\n",
+    "\n",
+    "memory = ConversationSummaryBufferMemory(llm=llm, max_token_limit=100)\n",
+    "memory.save_context({\"input\": \"Hello\"}, {\"output\": \"What's up\"})\n",
+    "memory.save_context({\"input\": \"Not much, just hanging\"},\n",
+    "                    {\"output\": \"Cool\"})\n",
+    "memory.save_context({\"input\": \"What is on the schedule today?\"}, \n",
+    "                    {\"output\": f\"{schedule}\"})\n",
+    "\n",
+    "memory.load_memory_variables({})\n",
+    "\n",
+    "\n",
+    "conversation = ConversationChain(\n",
+    "    llm=llm, \n",
+    "    memory = memory,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "conversation.predict(input=\"What would be a good demo to show?\")\n",
+    "\n",
+    "memory.load_memory_variables({})"
    ]
   }
  ],
