--- a/backend/app/ai/langchain-starter/LLM-Memory.ipynb
+++ b/backend/app/ai/langchain-starter/LLM-Memory.ipynb
@@ -324,6 +324,19 @@
     "\n",
     "memory.load_memory_variables({})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Additional memory types\n",
+    "# Vector data memory: Stores text (from conversation or elsewhere) in a vector database, retrieve most relevant blocks of text\n",
+    "\n",
+    "# Entity memories\n",
+    "# Using LLM, remember details about specific entities."
+   ]
   }
  ],
  "metadata": {
