trying chains now with CSV data + pandas

--- a/backend/app/ai/langchain-starter/LLM-Memory.ipynb
+++ b/backend/app/ai/langchain-starter/LLM-Memory.ipynb
@@ -335,7 +335,10 @@
     "# Vector data memory: Stores text (from conversation or elsewhere) in a vector database, retrieve most relevant blocks of text\n",
     "\n",
     "# Entity memories\n",
-    "# Using LLM, remember details about specific entities."
+    "# Using LLM, remember details about specific entities.\n",
+    "# This is when you want it to remember details and facts about a certain person, etc.\n",
+    "\n",
+    "# You can use several different kinds of memory here in LangChain as well. You can also just store the whole conversation here too."
    ]
   }
  ],
